added the first blog

--- a/index.html
+++ b/index.html
@@ -4,8 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My simple website</title>
+    <link rel="stylesheet" href="blog.css">
 </head>
 <body>
-    
+    <div>
+        <h3>My first website</h3>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat at aliquam corporis, facere est aspernatur voluptates beatae rem dolores tempora dolorem quos doloremque, aut eveniet deserunt! Quam laboriosam nostrum necessitatibus.</p>
+    </div>
 </body>
 </html>
