--- a/index.html
+++ b/index.html
@@ -23,5 +23,11 @@
         <h3>My fourth website</h3>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat at aliquam corporis, facere est aspernatur voluptates beatae rem dolores tempora dolorem quos doloremque, aut eveniet deserunt! Quam laboriosam nostrum necessitatibus.</p>
     </div>
+    <div><h3>You to push increment code</h3>
+    <ul>
+        <li>git add .</li> 
+        <li>git commit -m"add a meaningful commit message</li>
+        <li>git push</li>
+    </ul></div>
 </body>
 </html>
