--- a/index.html
+++ b/index.html
@@ -29,5 +29,9 @@
         <li>git commit -m"add a meaningful commit message</li>
         <li>git push</li>
     </ul></div>
+    <div>
+        <h3>Kim kim everyday one single dim</h3>
+        <img src="image/pexels-ella-olsson-1640771.jpg" alt="">
+    </div>
 </body>
 </html>
